Resolved merge conflict in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ google-auth==2.22.0
 requests
 gspread
 oauth2client
-flask
-gunicorn
+Flask
 requests
+datetime
+random
+gunicorn  # Required for production deployment
